# TexasAudit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: ai_settings.py  guide_evidence.py  page_evidence.py  test_result.py  website.py
app/services/: guide_extractor.py  playwright_runner.py  site_crawler.py  website_health_auditor.py  website_registry.py
app/services/ai/: base_ai_client.py
app/ui/: streamlit_app.py
config/: websites.yaml
docs/: phase1-plan.md
tests/: test_guide_extractor.py  test_models.py  test_website_health_auditor.py
